third_party/WebKit/Source/core/page/DragController.cpp
@@ -200,6 +200,7 @@ static DocumentFragment* DocumentFragmentFromDragData(
 bool DragController::DragIsMove(FrameSelection& selection,
                                 DragData* drag_data) {
   return document_under_mouse_ == drag_initiator_ &&
+         selection.SelectionHasFocus() &&
          selection.ComputeVisibleSelectionInDOMTreeDeprecated()
              .IsContentEditable() &&
          selection.ComputeVisibleSelectionInDOMTreeDeprecated().IsRange() &&
